--- a/pom.xml
+++ b/pom.xml
@@ -4,17 +4,17 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>edu.isi.bmkeg</groupId>
 	<artifactId>vpdmfGenerator</artifactId>
-	<version>1.1.4-SNAPSHOT</version>
+	<version>1.1.5-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<parent>
 		<groupId>edu.isi.bmkeg</groupId>
 		<artifactId>bmkeg-parent</artifactId>
-		<version>1.1.4-SNAPSHOT</version>
+		<version>1.1.5-SNAPSHOT</version>
 		<relativePath>../bmkeg-parent</relativePath>
 	</parent>
 
-	<name>VPDMf</name>
+	<name>VPDMf Generator System</name>
 
 	<profiles>
 		<profile>
